# gitbriefly

./: CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  REVIEW.md  SECURITY.md  cli.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
gitbrief/: __init__.py  cli.py
gitbrief/ai/: __init__.py  prompts.py  summarizer.py
gitbrief/ai/providers/: __init__.py  anthropic.py  ollama.py  openai.py
gitbrief/commands/: __init__.py  doctor.py  history.py  standup.py  stats.py  today.py  week.py
gitbrief/core/: __init__.py  git_reader.py  memory.py  utils.py
gitbrief/exporters/: __init__.py  json.py  markdown.py
gitbriefly/: __init__.py  cli.py
gitbriefly/ai/: __init__.py  prompts.py  summarizer.py
gitbriefly/ai/providers/: __init__.py  anthropic.py  ollama.py  openai.py
gitbriefly/commands/: __init__.py  doctor.py  history.py  standup.py  stats.py  today.py  week.py
gitbriefly/core/: __init__.py  git_reader.py  memory.py  utils.py
gitbriefly/exporters/: __init__.py  json.py  markdown.py
tests/: conftest.py  test_git_reader.py  test_summarizer.py
