[build-system]
requires = ["setuptools>=61.0,<67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitbriefly"
version = "0.1.3"
description = "Your daily developer standup - powered by Git history"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "Akshat190", email = "akshatchoksi8@gmail.com"}
]
keywords = ["cli", "git", "developer-tools", "ai", "productivity", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "GitPython>=3.1.0",
    "requests>=2.31.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "llm-json-repair>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.0.0"]

[project.scripts]
gitbriefly = "gitbriefly.cli:app"

[project.urls]
Homepage = "https://github.com/Akshat190/gitbriefly"
Repository = "https://github.com/Akshat190/gitbriefly"
Issues = "https://github.com/Akshat190/gitbriefly/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitbriefly*"]

[tool.setuptools.package-data]
gitbriefly = ["*.json"]